refactor: Java 21 for tests (#5451)
* refactor: Java 21 for tests

Use this link to re-run the recipe: https://app.moderne.io/builder/x6dMVMcxs?organizationId=ODQ2MGExMTUtNDg0My00N2EwLTgzMGMtNGE1NGExMTBmZDkw

Co-authored-by: Moderne <team@moderne.io>

* Revert changes to JavaTypeMappingTest as that's used elsewhere too

* Revert changes to rewrite-java-tck as that's used elsewhere too

* Revert changes to ArrayTypeTest's use of `addFirst`

---------

Co-authored-by: Moderne <team@moderne.io>