@@ -23,6 +23,7 @@ import org.openrewrite.test.MockHttpSender;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Paths;
 import java.util.concurrent.*;
@@ -52,7 +53,7 @@ class RemoteFileTest {
 
     @Test
     void gradleWrapperDownloadFails() throws Exception {
-        URL distributionUrl = new URL("http://example.com");
+        URL distributionUrl = URI.create("http://example.com").toURL();
         ExecutionContext ctx = new InMemoryExecutionContext();
         HttpSenderExecutionContextView.view(ctx)
           .setLargeFileHttpSender(new MockHttpSender(408));
